feat: crupdate doctor
